[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Menus/NestMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Menus/ItemUseMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/Assets/s_ui_caret_0.png" type="Texture" id=3]
[ext_resource path="res://UI/Assets/alagard_by_pix3m-d6awiwp.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 4 )

[node name="ItemUseMenu" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="NinePatchRect" parent="." index="0"]
margin_left = -160.0
margin_top = -90.0
margin_right = -104.0
margin_bottom = -38.0

[node name="Caret" type="TextureRect" parent="NinePatchRect" index="0"]
margin_left = 8.0
margin_top = 3.0
margin_right = 16.0
margin_bottom = 11.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/CenterContainer" index="0"]
margin_left = 13.0
margin_top = 1.0
margin_right = 43.0
margin_bottom = 51.0

[node name="UseButton" type="Button" parent="NinePatchRect/CenterContainer/VBoxContainer" index="0"]
margin_right = 30.0
margin_bottom = 14.0
focus_neighbour_top = NodePath("../DropButton")
custom_styles/focus = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
button_mask = 0
text = "Use"
flat = true

[node name="InfoButton" type="Button" parent="NinePatchRect/CenterContainer/VBoxContainer" index="1"]
margin_top = 18.0
margin_right = 30.0
margin_bottom = 32.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
shortcut_in_tooltip = false
button_mask = 0
text = "Info"
flat = true

[node name="DropButton" type="Button" parent="NinePatchRect/CenterContainer/VBoxContainer" index="2"]
margin_top = 36.0
margin_right = 30.0
margin_bottom = 50.0
focus_neighbour_bottom = NodePath("../UseButton")
custom_styles/focus = SubResource( 1 )
custom_fonts/font = SubResource( 4 )
shortcut_in_tooltip = false
button_mask = 0
text = "Drop"
flat = true

